/*
 * Copyright (c) AppDynamics Inc
 * All rights reserved
 */
option java_package = "com.appdynamics.controller.eventsvc.verifier";

option java_outer_classname = "DTO";

message ElasticSearchAccount {
    required string globalAccountName = 1;
    required string accessKey = 2;
}

enum DocType {
    event = 0;
    snapshot = 1;
}

message PostFilter {
    optional bool firstInChain = 1;
    optional bool hasDeepDiveData = 2;
    optional bool diagnosticSnapshot = 3;
    optional bool badRequest = 4;
    optional int64 executionTimeInMills = 5;
    repeated string userExperiences = 6;
    repeated int64 btIds = 7;
    repeated int64 tierIds = 8;
    repeated int64 nodeIds = 9;
    repeated string diagnosticSessionGuids = 10;
    repeated int64 errorIds = 11;
    repeated int64 sepIds = 12;
}

message VerificationQuery {
    required string esQuery = 1; // ElasticSearch DSL query string
    required string debugMsg = 2; // query filter object serialized in json
    required string location = 3; // code invocation location
    required DocType docType = 4; // docType
    required string expectedResult = 5; // expected result set converted from sql resultset, for count it's a number
    required int32 expectedResultCount = 6; // resultset count
    required ElasticSearchAccount account = 7; // account info
    required int64 sqlQueryTime = 8; // time taken for MySql
    repeated string includedFields = 9; // ES is in denormalized form, the expectedResult might contain partial doc
    optional bool countQuery = 10; // indicates if the query is count query or not
    repeated string excludeFields = 11; // if exclude fields are set, it won't check include fields
    repeated string includeFields = 12; // check included fields
    required string controllerHost = 13; // controller host name
    optional PostFilter postFilter = 14; // we have to do post filter, discard if we did snapshot schema refactoring
}

message ElasticSearchResult {
    required string actualResult = 1; // result from ElasticSearch
    required int64 esQueryTime = 2; // time taken to query ElasticSearch
}

// convenient utility for quick name field reference of the ElasticSearch document
enum EventFieldNames {
    ids = 0;
    subType = 1;
    severity = 2;
    eventType = 3;
    entityType = 4;
    timestampMsec = 5;
    linkedEntities = 6;
    triggeredEntity = 7;
}